src/test/compile-fail/bad-main.rs
// error-pattern:expecting `native fn(~[str])

fn main(x: int) { }
